--- a/nppang/AndroidManifest.xml
+++ b/nppang/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name="com.dream2d.nppang.MainActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
