색상 지정하는 activity 추가.. 좀더 수정해야함

--- a/nppang/AndroidManifest.xml
+++ b/nppang/AndroidManifest.xml
@@ -24,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.dream2d.nppang.SelectColor"   
+            android:theme="@style/Theme.Transparent"         
+            android:screenOrientation="portrait" >            
+        </activity>
     </application>
     
     <!--  Cauly : 광고 노출을 위한 필수 권한 
