--- a/nppang/AndroidManifest.xml
+++ b/nppang/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.dream2d.nppang.MainActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            android:label="@string/app_name" >
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,20 +25,27 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.dream2d.nppang.SelectColor"   
-            android:theme="@style/Theme.Transparent"         
-            android:screenOrientation="portrait" >            
+            android:name="com.dream2d.nppang.SelectColor"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Transparent" >
+        </activity>
+        <activity
+            android:name="LoadNppangAmountFromSms"
+            android:theme="@style/Theme.Transparent"
+            android:screenOrientation="portrait" >     
         </activity>
     </application>
-    
-    <!--  Cauly : 광고 노출을 위한 필수 권한 
-  --> 
-  <uses-permission android:name="android.permission.INTERNET" /> 
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
-- <!--  Cauly : 광고 노출을 위한 선택적 권한 
-  --> 
-  <uses-permission android:name="android.permission.CALL_PHONE" /> 
-  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> 
-    
+
+    <!-- SMS 를 읽기 위한 권한 -->
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <!-- SMS Provider로 전송 -->
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+
+    <!-- Cauly : 광고 노출을 위한 필수 권한 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Cauly : 광고 노출을 위한 선택적 권한 -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
